# blueprint-cli-multicommands-python

./: .coveragerc  .gitignore  .pylintrc  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
mycommand/: cli.py  utils.py
mycommand_tests/acceptances/: test_cli.py
src/mycommand/: cli.py
tests/acceptances/: test_cli.py
tests/acceptances/fixtures/: __init__.py
tests/fixtures/scenario1/: fixtup.yml
