[metadata]
name = mycommand
version = 0.1.0
description = ""
long_description = file: README.md
long_description_content_type = text/markdown
authors =
    "Fabien Arcellier<fabien.arcellier@gmail.com>"
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Environment :: Console
license = "MIT"
readme = "README.md"

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.6
include_package_data = True

install_requires =
    click

[options.packages.find]
where = src
exclude = *_tests

[options.extras_require]
dev =
    coverage
    pylint
    twine

[options.entry_points]
console_scripts =
    mycommand = mycommand.cli:cli
